Center tokenized logos on mobile fix

--- a/themes/alphabit/static/css/style.css
+++ b/themes/alphabit/static/css/style.css
@@ -62,7 +62,7 @@ section.management {}
 section.members {background-color:#000;color:#FFF;}
 section.members {color:#000;text-align:left;letter-spacing:3px;}
 section.members > .content {overflow:hidden;}
-.investment-logos img {display:inline-block;vertical-align:middle;height:50px;width:auto;margin:0 10px 10px 10px;}
+.investment-logos img {display:block;vertical-align:middle;height:50px;width:auto;margin:0 auto 20px;clear:both;}
 
 
 .home-philosophy {max-width:900px;margin:0 auto;padding:40px 0;}
@@ -152,6 +152,7 @@ footer .backtotop {position:fixed;bottom:15px;right:15px;display:none;}
 	.fixed-header #main-header .main-nav {margin-bottom:0;box-shadow:0 3px 8px rgba(0,0,0,0.2)}
 	section.howwedo h2 {font-size:45px;}
 	.investment-process .panel-body .inner-content p.investment-logos {text-align:left;}
+	.investment-logos img {display:inline-block;vertical-align:middle;height:50px;width:auto;margin:0 10px 10px 10px;clear:none;}
 }
 
 @media (min-width: 990px) {
